# ai-video-studio

./: .gitignore  README.md  config.yaml  pyproject.toml
ai-video-studio/: .gitignore  components.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
ai-video-studio/docs/: agent-harness-design.md  coding-agent-tasks.md  team-briefing.md  workflow-logic.md
ai-video-studio/sidecar/: config.yaml  main.py  requirements.txt
ai-video-studio/sidecar/prompts/: director.txt  revision.txt  script.txt  script_writer.txt  storyboard.txt  terms.txt
ai-video-studio/sidecar/services/: llm_service.py  material_service.py  pipeline_service.py  subtitle_service.py  tts_service.py  video_service.py
ai-video-studio/src/: App.tsx  index.css  index.html  main.tsx
ai-video-studio/src-tauri/: Cargo.toml  tauri.conf.json
ai-video-studio/src-tauri/capabilities/: default.json
ai-video-studio/src-tauri/src/: lib.rs  main.rs
ai-video-studio/src-tauri/src/commands/: mod.rs
ai-video-studio/src-tauri/src/database/: mod.rs  schema.rs
ai-video-studio/src-tauri/src/sidecar/: mod.rs
ai-video-studio/src/hooks/: useProject.ts
ai-video-studio/src/i18n/: en.json  index.ts  zh.json
ai-video-studio/src/types/: index.ts
docs/: architecture.md
src/mymovie/: config.py  main.py
src/mymovie/adapters/: base.py  dreamina.py  registry.py
src/mymovie/agents/: assembly.py  base.py  dialog.py  prompt_gen.py  research.py  review.py  revision.py  scriptwriter.py  segmentation.py  storyboard.py  video_gen.py
src/mymovie/bus/: bus.py  message.py
(+43 files in other folders)
